src/components/css/Controls.css
.controls {
    width: 250px;
    display: flex;
    justify-content: space-around;
}

.change-image, .change-lang, .change-units, .change-f, .change-c {
    width: 45px;
    height: 45px;
    border-radius: 5px;
    background-color: rgba(255, 255, 255, 0.5);
    cursor: pointer;
    outline: none;
    user-select: none;
    transition: .2s ease-in-out;
    z-index: 3;
}

.change-image {
    display: flex;
    align-items: center;
    justify-content: center;
    color: #fff;
}

.change-image:hover, .change-lang:hover {
    background-color: rgba(27, 27, 27, 0.7);
    color: #fff;
}

.change-image:active, .change-lang:active, .change-f:active, .change-c:active{
    background-color: rgba(27, 27, 27, 0.2);
    color: #fff;
}

.load-image {
    animation: .6s spin infinite linear;
}

@keyframes spin {
    from {
        transform: rotate(0);
    } to {
        transform: rotate(360deg);
    }
}

.rotate-icon:hover {
    transform: rotate(180deg);
    transition: .3s ease-in-out;
}

.change-lang, .change-units {
    width: 90px;
}

.change-lang {
    display: flex;
    justify-content: space-around;
    align-items: center;
    color: #fff;
    position: relative;
}

.change-f, .change-c {
    border: none;
    cursor: pointer;
    font-size: 1.2vw;
    background-color: rgba(65, 65, 65, 0.7);
    color: #fff;
}

.change-f {
    border-radius: 5px 0 0 5px;
}

.change-c {
    border-radius: 0 5px 5px 0;
}

.active-but {
    background-color: rgba(255, 255, 255, 0.5);
}

.lang-list {
    display: block;
    position: absolute;
    list-style: none;
    top: 110%;
    width: 90px;
    background-color: rgba(255, 255, 255, 0.5);
    border-radius: 5px;
    transition: .3s ease-in-out;
}

.hidden-list {
    display: none;
}

.lang-list > li {
    line-height: 1.5;
    text-align: center;
    transition: .3s ease;
}

.lang-list > li:hover {
    background-color: rgba(27, 27, 27, 0.7);
}

@media (max-width: 768px) {
    .change-f, .change-c {
        font-size: 3vw;
    }
}

@media (max-width: 450px) {
    .controls {
        width: 100%;
        justify-content: flex-start;
    }

    .change-f, .change-c {
        font-size: 4vw;
    }

    .change-image, .change-lang, .change-units {
        margin-right: 5vw;
    }
}

